--- a/src/components/header.css
+++ b/src/components/header.css
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   z-index: var(--z-fixed);
-  background-color: var(--container-color);
+  background-color: var(--body-color);
 }
 
 .nav {
@@ -31,8 +31,16 @@
   align-items: center;
   font-size: var(--small-font-size);
   color: var(--title-color);
+  font-weight: var(--font-medium);
+  transition: .3s;
 }
 
-.nav__close, .nav__toggle {
+.nav__close, .nav__toggle, .nav__icon {
   display: none;
+}
+
+/* Link */
+
+.active-link, .nav__link:hover {
+  color: var(--title-color-dark);
 }
