social and scroll

--- a/src/App.css
+++ b/src/App.css
@@ -133,6 +133,7 @@ img {
   color: var(--container-color);
   padding: 1.25rem 2rem;
   border: 1rem;
+  border-radius:2rem;
   font-weight: var(--font-medium);
 }
 
