--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -1,19 +1,19 @@
 .skills__container {
-    grid-template-columns: repeat(2, 350px);
-    column-gap: 3rem;
-    justify-content: center;
+    grid-template-columns: repeat(2, 370px);
+    column-gap: 2.5rem;
+    justify-content: space-around;
 }
 
 .skills__content {
     background-color: var(--container-color);
     border: 1px solid rgba(0, 0, 0, 0.1);
-    padding: 2rem 4rem;
+    padding: 2rem 3rem;
     border-radius: 1.25rem;
 }
 
 .skills__title {
     font-size: var(--normal-font-size);
-    font-weight: var(--font-medium);
+    font-weight: var(--font-semi-bold);
     text-align: center;
     margin-bottom: var(--mb-1-5);
 }
@@ -58,7 +58,7 @@
         row-gap: 2rem;
     }
   }
-  
+
   /* For medium devices */
   @media screen and (max-width: 576px) {
     .skills__container {
@@ -69,7 +69,7 @@
         padding: 1.5rem;
     }
   }
-  
+
   /* For small devices */
   @media screen and (max-width: 350px) {
     .skills__box {
@@ -80,4 +80,3 @@
         font-size: var(--small-font-size);
     }
   }
-  
