--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -8,6 +8,7 @@
     width: 350px;
     border-radius: 1.5rem;
     justify-self: center;
+    box-shadow: -4px 4px 8px var(--title-color);
 }
 
 .about__info {
